@@ -892,8 +892,6 @@
 
 <doc_riv_flux_input%scale_factor>1.0</doc_riv_flux_input%scale_factor>
 
-<ndep_data_type>monthly-calendar</ndep_data_type>
-
 <nox_flux_monthly_input%file_fmt>nc</nox_flux_monthly_input%file_fmt>
 
 <nox_flux_monthly_input%file_varname>NOy_deposition</nox_flux_monthly_input%file_varname>
@@ -906,14 +904,23 @@
 
 <nhy_flux_monthly_input%scale_factor>7.1429e+06</nhy_flux_monthly_input%scale_factor>
 
+<ndep_data_type>monthly-calendar</ndep_data_type>
 <ndep_data_type ocn_transient="unset"    >monthly-calendar</ndep_data_type>
 <ndep_data_type ocn_transient="1850-2000">shr_stream</ndep_data_type>              
+<ndep_data_type ocn_transient="rcp4.5">shr_stream</ndep_data_type>              
+<ndep_data_type ocn_transient="rcp8.5">shr_stream</ndep_data_type>              
 
 <ndep_shr_stream_year_first>1849</ndep_shr_stream_year_first>  
+<ndep_shr_stream_year_first ocn_transient="rcp4.5">2004</ndep_shr_stream_year_first>  
+<ndep_shr_stream_year_first ocn_transient="rcp8.5">2004</ndep_shr_stream_year_first>  
 
 <ndep_shr_stream_year_last>2006</ndep_shr_stream_year_last>   
+<ndep_shr_stream_year_last ocn_transient="rcp4.5">2101</ndep_shr_stream_year_last>   
+<ndep_shr_stream_year_last ocn_transient="rcp8.5">2101</ndep_shr_stream_year_last>   
 
 <ndep_shr_stream_year_align>1849</ndep_shr_stream_year_align>  
+<ndep_shr_stream_year_align ocn_transient="rcp4.5">2004</ndep_shr_stream_year_align>  
+<ndep_shr_stream_year_align ocn_transient="rcp8.5">2004</ndep_shr_stream_year_align>  
 
 <ndep_shr_stream_scale_factor>7.1429e+06</ndep_shr_stream_scale_factor>
 
@@ -967,7 +974,11 @@
 <nhy_flux_monthly_input%filename ocn_grid="gx1v6">ocn/pop/gx1v6/forcing/ndep_ocn_1850_gx1v6_c100428.nc</nhy_flux_monthly_input%filename>  
 
 <ndep_shr_stream_file ocn_grid="gx3v7">ocn/pop/gx3v7/forcing/ndep_ocn_1850-2005_gx3v7_c100612.nc</ndep_shr_stream_file> 
+<ndep_shr_stream_file ocn_grid="gx3v7" ocn_transient="rcp4.5">ocn/pop/gx3v7/forcing/ndep_ocn_rcp45_gx3v7_c100816.nc</ndep_shr_stream_file> 
+<ndep_shr_stream_file ocn_grid="gx3v7" ocn_transient="rcp8.5">ocn/pop/gx3v7/forcing/ndep_ocn_rcp85_gx3v7_c100816.nc</ndep_shr_stream_file> 
 <ndep_shr_stream_file ocn_grid="gx1v6">ocn/pop/gx1v6/forcing/ndep_ocn_1850-2005_gx1v6_c100612.nc</ndep_shr_stream_file> 
+<ndep_shr_stream_file ocn_grid="gx1v6" ocn_transient="rcp4.5">ocn/pop/gx1v6/forcing/ndep_ocn_rcp45_gx1v6_c100816.nc</ndep_shr_stream_file> 
+<ndep_shr_stream_file ocn_grid="gx1v6" ocn_transient="rcp8.5">ocn/pop/gx1v6/forcing/ndep_ocn_rcp85_gx1v6_c100816.nc</ndep_shr_stream_file> 
 
 <!---------------------------->
 <!--    ecosys_parms_nml    -->
